force-app/main/default/objects/BMCServiceDesk__ReconciliationRule__c/BMCServiceDesk__ReconciliationRule__c.object-meta.xml
<CustomObject>
    <description>To store reconciliation Rules for classes.</description>
    <label>Reconciliation Rule</label>
    <nameField>
        <displayFormat>Rule-{00000}</displayFormat>
        <label>Rule#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reconciliation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>