force-app/main/default/objects/BMCServiceDesk__ReconciliationRule__c/fields/BMCServiceDesk__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Class_Name__c</fullName>
    <description>To get the Class names.</description>
    <formula>BMCServiceDesk__FKCMDB_Class__r.BMCServiceDesk__Class__c</formula>
    <label>Class Name</label>
    <type>Text</type>
</CustomField>