force-app/main/default/objects/BMCServiceDesk__ReconciliationRule__c/fields/BMCServiceDesk__FilterLogic__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FilterLogic__c</fullName>
    <description>This field stores the specified conditions for the filter logic.</description>
    <inlineHelpText>Enter the values to specify the conditions to set the logical filters.</inlineHelpText>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>