force-app/main/default/objects/BMCServiceDesk__ReconciliationRule__c/fields/BMCServiceDesk__FKCMDB_Class__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKCMDB_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To establish the relation with the concerned CMDB Class</description>
    <inlineHelpText>Select the CMDB class for which you want to create a model.</inlineHelpText>
    <label>CMDB Class</label>
    <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
    <relationshipLabel>Reconciliation Rules</relationshipLabel>
    <relationshipName>Reconciliation_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>