force-app/main/default/objects/BMCServiceDesk__ReconciliationRule__c/fields/BMCServiceDesk__Reconciliation_Criteria__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Reconciliation_Criteria__c</fullName>
    <description>To store the fields of Reconciliation rule</description>
    <label>Reconciliation Criteria</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>