force-app/main/default/objects/BMCServiceDesk__ReconciliationRule__c/fields/BMCServiceDesk__Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Rule_Name__c</fullName>
    <label>Rule Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>